tests/unit-fail/j075b.ref
Error: CTI2
Description: Arrays must have positive length.
Type: Constraint violation.
See also: C11 sec. 6.7.6.2:1
  at main(j075b.c:5)
  at <file-scope>(<unknown>)
