tests/unit-fail/j075b.c
int f(int x) { return x - 5; }

int main(void) {
      int x = 5;
      int a[f(x)];
}
